iml-services/iml-devices/src/snapshots/test__vd_with_shared_parents_removed_from_oss2_when_parent_disappears.snap
---
source: iml-services/iml-devices/src/db.rs
expression: updates
---
[
    Remove(
        DeviceHost {
            device_id: DeviceId(
                "b",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {},
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: None,
            fs_label: None,
            fs_uuid: None,
        },
    ),
    Remove(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {},
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: None,
            fs_label: None,
            fs_uuid: None,
        },
    ),
    Remove(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {},
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: None,
            fs_label: None,
            fs_uuid: None,
        },
    ),
]
